--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    --box--color: rgb(182, 182, 255); 
+    --top--color: rgb(243, 255, 191);
 }
 
 .klas {
@@ -11,12 +13,13 @@
     grid-gap: 5px;
 }
 
-div{
+/*div{
     border: 1px solid black;
-}
+} */
 
-.box1, .box2, .box3, .box4, .box6, .box7, .box8, .box9, .box10, .box11{
-    background-color: grey;
+.box2, .box3, .box4, .box6, .box7, .box8, .box9, .box10, .box11{
+    background-color: var(--box--color);
+    border: 1px solid black;
 }
 
 
@@ -29,7 +32,8 @@ Rows = horizontaal*/
     grid-row-start:1;
     grid-row-end:2;
     text-align: center;
-
+    border: 1px solid black;
+    background-color: var(--top--color);
 }
 
 .box2{
@@ -63,6 +67,8 @@ Rows = horizontaal*/
     grid-row-end: 8;
     text-align: center;
     background-color: rgb(230, 255, 230);
+    border: 1px solid black;
+
 }
 
 .box6{
@@ -120,4 +126,6 @@ Rows = horizontaal*/
     grid-row-end: 9;
     text-align: center;
     background-color: rgb(255, 212, 212);
+    border: 1px solid black;
+
 }
